# ScalingRL

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  flake.nix  pyproject.toml
results/: full_contamination.json  math500_contamination.json  qwen2.5_lora1_contamination.json  qwen2.5_lora8_contamination.json  qwen2.5_lora_r1_eval.json  qwen2.5_lora_r8_eval.json
scalingrl/: __init__.py  config.py  data.py  lora_xs.py  models.py  training.py  utils.py
scalingrl/evaluation/: __init__.py  aime.py  contamination.py  evaluator.py  gsm8k.py  metrics.py
scripts/: evaluate.py  evaluate_contamination.py  evaluate_gpqa.py  sweep.py  sweep_rl.py  train.py
tests/: __init__.py  test_contamination.py  test_data.py  test_models.py  test_rewards.py
