[project]
name = "scalingrl"
version = "0.1.0"
description = "GRPO experimentation framework for RL research"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "bitsandbytes>=0.49.1",
  "blobfile>=3.0.0",
  "datasets>=4.5.0",
  "matplotlib>=3.10.8",
  "numpy>=2.4.1",
  "peft>=0.18.1",
  "pip>=25.3",
  "polars>=1.37.1",
  "python-dotenv>=1.0.0",
  "torch>=2.10.0",
  "transformers>=4.57.6",
  "wandb>=0.24.1",
  # GRPO framework dependencies
  "trl>=0.12.0",
  "scipy>=1.14.0",
]

[dependency-groups]
dev = [
  "ipykernel>=7.1.0",
  "prek>=0.3.0",
  "ruff>=0.14.14",
  "pytest>=8.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

