[project]
name = "scalingrl"
version = "0.1.0"
description = "GRPO experimentation framework for RL research"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "bitsandbytes>=0.49.1",
  "blobfile>=3.0.0",
  "datasets>=4.5.0",
  "matplotlib>=3.10.8",
  "numpy>=1.24,<2.3",
  "peft>=0.18.1",
  "pip>=25.3",
  "polars>=1.37.1",
  "python-dotenv>=1.0.0",
  "torch>=2.10.0",
  "transformers>=4.57.6",
  "wandb>=0.24.1",
  # GRPO framework dependencies
  "trl>=0.12.0",
  "scipy>=1.14.0",
  # vLLM for fast rollout generation
  "vllm>=0.16.0",
  "zstandard>=0.25.0",
]

[dependency-groups]
dev = [
  "ipykernel>=7.1.0",
  "prek>=0.3.0",
  "ruff>=0.14.14",
  "pytest>=8.0.0",
  "ty>=0.0.14",
]

[tool.uv]
environments = ["sys_platform == 'linux'"]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu130", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cu130", marker = "sys_platform == 'linux'" }]
torchaudio = [{ index = "pytorch-cu130", marker = "sys_platform == 'linux'" }]
vllm = [{ url = "https://github.com/vllm-project/vllm/releases/download/v0.16.0/vllm-0.16.0%2Bcu130-cp38-abi3-manylinux_2_35_x86_64.whl", marker = "sys_platform == 'linux'" }]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

